Progetto base completo 1.1